Practica de ciclos y control de flujo

--- a/semana02/index.html
+++ b/semana02/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script async src="./js/main.js"></script>
+    <title>Semana 2</title>
+    <script src="./js/main.js"></script>
 </head>
 <body>
 
     <h1>Practica de la semana 2</h1>
+    <h4>Ciclos:</h4>
+    <ul>
+        <li>While</li>
+        <li>Do While</li>
+        <li>For</li>
+    </ul>
     
 </body>
 </html>
