Se agrego ejemplos de OR y ??

--- a/semana02/index.html
+++ b/semana02/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semana 2</title>
-    <script src="./js/main.js"></script>
+    <script defer src="./js/main.js"></script>
 </head>
 <body>
 
@@ -13,7 +13,13 @@
     <ul>
         <li>While</li>
         <li>Do While</li>
-        <li>For</li>
+        <li>For</li>        
+    </ul>
+
+    <h4>Control de Flujo y Manejo de Valores</h4>
+    <ul>
+        <li>Condiciones Básicas</li>
+        <li>Condiciones Anidadas</li>
     </ul>
     
 </body>
