Modificar los archivos sobre la calculadora basica

--- a/semana03/calculadora.html
+++ b/semana03/calculadora.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora</title>
     <script defer src="./js/calculadora.js"></script>
 </head>
 <body>
+    <h1>🧮Calculadora Básica</h1>
     
 </body>
 </html>
