Modificamos el nombre de la practica de Objetos Literales

--- a/semana04/practica_ol.html
+++ b/semana04/practica_ol.html
@@ -8,7 +8,7 @@
      <script defer src="./js/practica.js"></script>
 </head>
 <body>
-    <h1>Practica de objetos literales</h1>
+    <h1>Practica de Objetos Literales</h1>
     
 </body>
 </html>
